--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 :root {
   --background: #ffffff;
@@ -8,8 +8,13 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --color-primary: #0b0b0b;
+  --color-secondary: #e22e35;
+  --color-muted: #383838cc;
+  --color-dark: #383838;
+  --color-header: #0b0b0b;
+  --color-border: #e9e9e9;
+  --color-shadow: #9f9f9f73;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -17,10 +22,4 @@
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
 }
